# tg-bot-template

./: .gitignore  README.md  config.ini.example  main.py  pyproject.toml
config/: __init__.py  config.py
