[tool.poetry]
name = "tg-bot-template"
version = "0.1.0"
description = "My template for telegram bot"
authors = ["layerqa"]
license = "GNU GENERAL PUBLIC LICENSE V3"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.20"
tortoise-orm = "^0.19.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
